css/navbar.css
header{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 70px;
    padding: 20px 10%;
    z-index: 990;
    display: flex;
    padding-bottom: 55px;
    backdrop-filter: blur(15px);
    background: rgba(255, 255, 255, 0.2);

    -webkit-mask-image: linear-gradient(to bottom, 
        rgba(0,0,0,1) 0%, 
        rgba(0,0,0,0.1) 70%, 
        rgba(0,0,0,0) 100%
    );
    mask-image: linear-gradient(to bottom, 
        rgba(0,0,0,1) 0%, 
        rgba(0,0,0,0.1) 70%, 
        rgba(0,0,0,0) 100%
    );
}

.navbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 70px;
    padding: 20px 10%;
    z-index: 1000;
    padding-bottom: 55px;
}

.nav-links {
    display: flex;
    gap: 30px;
    justify-content: flex-end;
    margin-top: 40px;
    width: fit-content;
    justify-self: flex-end;
    background: rgba(165, 163, 163, 0.2);
    height: fit-content;
    border-radius: 12rem;
    z-index: 1000;
}

.navbar button{
    background: none;
    border: none;
    color: var(--text-color);
    font-family: var(--font-main);
    font-size: 1.15rem;
    cursor: pointer;
    text-decoration: none;
    transition: color 0.3s;
    padding: 8px 12px;
}

.nav-button{
    background: none;
    border: none;
    color: var(--text-color);
    font-family: var(--font-main);
    font-size: 1.15rem;
    cursor: pointer;
    text-decoration: none;
    transition: color 0.3s;
    padding: 5px 12px;
}

.navbar button:hover, .nav-button:hover {
    transform: scale(1.03);
    background-color: rgb(165, 163, 163, 0.2);
    border-radius: 1.3rem;   
}

.links-container{
    padding: 2px 3px;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 1.3rem;
    height: fit-content;
    opacity: 5px;
    display: flex;
    justify-content: center;
    margin: 10px 10px 10px 10px;
}

.section-title {
    margin-bottom: 10px;
    text-transform: uppercase;
}

@media (max-width: 812px){

      .navbar{
        display: flex;
        justify-content: center;
    }
}

